Adding source files

--- a/BowlingScoreCalculatorFrontend/appsettings.json
+++ b/BowlingScoreCalculatorFrontend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=KAYS-SERVER;Initial Catalog=BowlingScoreCalculator;Persist Security Info=True;User ID=test;Password=test;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
